Improving a bit the syntax